--- a/1.html
+++ b/1.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">
   <title>Zagadka 1</title>
   <style>
-    body { font-family: Verdana, sans-serif; background-color: #f0f8ff; padding: 20px; max-width: 600px; margin: auto; }
-    input[type="text"], input[type="number"] { width: 100%; padding: 8px; }
-    button { margin-top: 10px; background-color: #007acc; color: white; border: none; padding: 8px 12px; border-radius: 6px; }
-    label { display: block; margin: 8px 0; }
+    body { 
+      font-family: Verdana, sans-serif; 
+      background-color: #f0f8ff; 
+      padding: 20px; 
+      max-width: 600px; 
+      margin: auto; 
+      text-align: center; 
+    }
+    input[type="text"], input[type="number"] { width: 80%; padding: 8px; }
+    button { margin-top: 10px; background-color: #007acc; color: white; border: none; padding: 8px 12px; border-radius: 6px; cursor: pointer; }
+    button:hover { background-color: #005f99; }
+    label { display: block; margin: 8px 0; text-align: left; }
     .hidden { display: none; }
     .correct { color: green; }
     .wrong { color: red; }
@@ -18,6 +26,7 @@
   <p>Jakie zwierzę miało trzy głowy w mitologii greckiej?</p>
 
   <input type="text" id="answer" placeholder="Twoja odpowiedź...">
+  <br>
   <button onclick="checkAnswer()">Sprawdź</button>
 
   <p id="message" class="hidden"></p>
