--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Witaj</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 600px; margin: auto; text-align: center; background-color: #303030;
-    color: #ffffff;}
+    body { 
+      font-family: Verdana, sans-serif; 
+      background-color: #f0f8ff; 
+      padding: 20px; 
+      max-width: 600px; 
+      margin: auto; 
+      text-align: center; 
+    }
+    input[type="text"], input[type="number"] { width: 80%; padding: 8px; }
+    button { margin-top: 10px; background-color: #007acc; color: white; border: none; padding: 8px 12px; border-radius: 6px; cursor: pointer; }
+    button:hover { background-color: #005f99; }
+    label { display: block; margin: 8px 0; text-align: left; }
     .hidden { display: none; }
-    input[type="text"] { width: 100%; padding: 8px; }
-    button { margin-top: 10px; color: darkcyan;}
     .correct { color: green; }
     .wrong { color: red; }
-  </style>
+</style>
 </head>
 <body>
   <h1>Witaj!</h1>
   <p>Zapraszamy na oleśnicką grę terenową!</p>
-
-  
   <a href="1.html"><button>Zaczynajmy!</button></a>
 </body>
 </html>
