--- a/1.html
+++ b/1.html
@@ -40,6 +40,7 @@
       p, input, button { font-size: 18px; }
       input { padding: 10px; }
     }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
@@ -76,3 +77,4 @@
   </script>
 </body>
 </html>
+
