--- a/2.html
+++ b/2.html
@@ -68,6 +68,10 @@
       answerInput.disabled = true;
       checkBtn.classList.add("hidden");
       if (hasLetter) {
+        message.classList.add("hidden");
+        next.classList.remove("hidden");
+        answerInput.disabled = true;
+        checkBtn.classList.add("hidden");
         next.innerHTML = '<p class="correct">Litera do hasła: <strong>K</strong></p><a href="3.html"><button>Dalej</button></a>';
       } else {
         next.innerHTML = '<a href="3.html"><button>Dalej</button></a>';
