--- a/3.html
+++ b/3.html
@@ -77,6 +77,10 @@
     function endGame(hasLetter) {
       disableQuiz();
       if (hasLetter) {
+        message.classList.add("hidden");
+        next.classList.remove("hidden");
+        answerInput.disabled = true;
+        checkBtn.classList.add("hidden");
         next.innerHTML = '<p class="correct">Litera do hasła: <strong>T</strong></p><a href="4.html"><button>Dalej</button></a>';
       } else {
         next.innerHTML = '<a href="4.html"><button>Dalej</button></a>';
